Thu Oct 17 05:40:33 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (objspace_each_objects): do not skip empty RVALUEs.

Thu Oct 17 05:31:31 2013  Koichi Sasada  <ko1@atdot.net>

	* error.c (rb_bug_reporter_add): return simply 0 if failed.
	  Please check return value.

Thu Oct 17 05:17:33 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: add new method
	  ObjectSpace.trace_object_allocations_debug_start for GC debugging.
	  If you encounter the BUG "... is T_NONE" (and so on) on your
	  application, please try this method at the beggining of your app.

Wed Oct 16 22:35:27 2013  Zachary Scott  <e@zzak.io>

	* ext/io/nonblock/nonblock.c: use rb_cIO instead of VALUE

Wed Oct 16 17:45:13 2013  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: check nil before calling `signal?'
	  for a process status.

Wed Oct 16 17:37:17 2013  Koichi Sasada  <ko1@atdot.net>

	* error.c, internal.h (rb_bug_reporter_add): add a new C-API.
	  rb_bug_reporter_add() allows to register a function which
	  is called at rb_bug() called.

	* ext/-test-/bug_reporter/bug_reporter.c: add a test for this C-API.

	* ext/-test-/bug_reporter/extconf.rb: ditto.

	* test/-ext-/bug_reporter/test_bug_reporter.rb: ditto.

Wed Oct 16 15:14:21 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add a line into NEWS for last commit.

Wed Oct 16 15:09:14 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: add a new method `reachable_objects_from_root'.
	  ObjectSpace.reachable_objects_from_root returns all objects referred
	  from root (called "root objects").
	  This feature is for deep object analysis.

	* test/objspace/test_objspace.rb: add a test.

Wed Oct 16 15:00:21 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master b955554.  Changes:

	  Fixed NameError for Gem::Ext due to re-entering file lookup in
	  RubyGems' overridden require.  Bug by Koichi Sasada.

	  Fixed possible circular require warning in tests.
